[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathplanning"
version = "0.1.0"
description = "Frenet-frame jerk-minimized-trajectory (JMT) path planning utilities and reference implementation."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Kun Lin" }]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["python/pathplanning"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
# Black-compatible defaults.
